Ui fix for overflow

--- a/static/style.css
+++ b/static/style.css
@@ -28,6 +28,6 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.overflow-x-scroll {
-    overflow-x: scroll
+.overflow-x-auto {
+    overflow-x: auto
 }
